<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98A3AE"
    tools:context=".MainActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="408dp"
        android:layout_height="472dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInput"
        android:layout_width="336dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchbar_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/www_search"
        android:contentDescription="@string/search_icon_ContentDesc"
        android:onClick="onClickSearch"
        app:layout_constraintBottom_toBottomOf="@+id/searchInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toEndOf="@+id/searchInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/previous_icon"
        android:contentDescription="@string/previous_button_ContentDesc"
        android:onClick="onClickGoBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nextButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/next_icon"
        android:contentDescription="@string/next_page_button_ContentDesc"
        android:onClick="onClickGoForward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previousButton"
        app:layout_constraintTop_toTopOf="@+id/loadHTML"
        app:layout_constraintVertical_bias="0.38" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/refresh_icon"
        android:contentDescription="@string/refresh_button_ContentDesc"
        android:onClick="onClickRefresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loadHTML"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/loadHTML"
        android:layout_width="82dp"
        android:layout_height="53dp"
        android:onClick="onClickLoadHTML"
        android:text="@string/load_html_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/refreshButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nextButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>